gitops/production/iddh-members/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iddh-members
  namespace: iddh-members-production
spec:
  ingressClassName: nginx
  rules:
  - host: iddhmembros.prakash.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iddh-members
            port:
              number: 80
